--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
         "build:wiki": "pnpm --filter @clover/wiki run build"
     },
     "dependencies": {
+        "@easykit/eslint-config": "workspace:*",
         "@radix-ui/react-checkbox": "1.1.1",
         "@radix-ui/react-icons": "1.3.0",
         "@radix-ui/react-popper": "^1.2.0",
         "@types/sortablejs": "^1.15.8",
+        "@vitejs/plugin-react": "4.3.2",
         "axios": "1.7.4",
         "bowser": "2.11.0",
         "classnames": "2.5.1",
@@ -48,11 +50,12 @@
         "tailwindcss": "3.4.4",
         "tailwindcss-animate": "1.0.7",
         "tributejs": "5.1.3",
+        "vite": "5.4.8",
+        "vite-plugin-dts": "^4.2.3",
+        "vite-plugin-node-polyfills": "^0.22.0",
         "zod": "3.23.8",
         "zod-i18n-map": "2.27.0",
-        "zustand": "4.5.4",
-        "vite": "5.4.8",
-        "@vitejs/plugin-react": "4.3.2"
+        "zustand": "4.5.4"
     },
     "devDependencies": {
         "@types/gulp": "4.0.17",
