--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,7 +19,6 @@ jobs:
       - run: npm i -g pnpm
       - run: pnpm i
       - run: pnpm build:design
-      - run: cd packages/design/dist/
-      - run: npm publish
+      - run: cd packages/design/dist/ && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
