--- a/.github/workflows/npm-design.yml
+++ b/.github/workflows/npm-design.yml
@@ -1,14 +1,15 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Node.js Package - Design
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - "design.*"
 
 jobs:
-  publish-npm:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
