--- a/.github/workflows/npm-eslint-config.yml
+++ b/.github/workflows/npm-eslint-config.yml
@@ -19,7 +19,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm i -g pnpm
       - run: pnpm i
-      - run: pnpm build:i18n
-      - run: cd packages/i18n/dist/ && npm publish
+      - run: cd packages/eslint-config/ && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
