--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@easykit/design",
-    "version": "0.0.23",
+    "version": "0.0.24",
     "keywords": [
         "easykit",
         "design",
@@ -59,6 +59,7 @@
         "escape-html": "1.0.3",
         "github-markdown-css": "5.6.1",
         "is-hotkey": "0.2.0",
+        "lodash": "4.17.21",
         "lucide-react": "0.400.0",
         "postcss": "8.4.39",
         "react-day-picker": "8.10.1",
