--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@easykit/design",
-    "version": "0.0.32",
+    "version": "0.0.33",
     "keywords": [
         "easykit",
         "design",
@@ -72,7 +72,8 @@
         "slate-react": "0.106.0",
         "tailwind-merge": "2.3.0",
         "tailwindcss": "3.4.4",
-        "uuid": "10.0.0"
+        "uuid": "10.0.0",
+        "rc-tree": "5.10.1"
     },
     "devDependencies": {
         "@types/uuid": "10.0.0"
