--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "react-dom": "18.3.1",
         "y-prosemirror": "1.2.9",
         "micromatch": "4.0.8",
-        "svelte": "4.2.19"
+        "svelte": "4.2.19",
+        "cross-spawn": "7.0.5"
     }
 }
