feat: 升级到 next15

--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
         "javascript-time-ago": "2.5.10",
         "localforage": "1.10.0",
         "lodash": "4.17.21",
-        "next": "14.2.10",
+        "next": "15.0.3",
         "node-rsa": "1.1.1",
         "qrcode": "1.5.3",
         "rc-tree": "5.9.0",
-        "react": "18.3.1",
         "react-copy-to-clipboard": "5.1.0",
-        "react-dom": "18.3.1",
+        "react": "19.0.0-rc.1",
+        "react-dom": "19.0.0-rc.1",
         "react-resizable-panels": "2.0.20",
         "react-textarea-autosize": "8.5.3",
         "recoil": "0.7.7",
@@ -80,8 +80,8 @@
     "resolutions": {
         "msgpackr": "1.10.1",
         "svgo": "3.0.2",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
+        "react": "19.0.0-rc.1",
+        "react-dom": "19.0.0-rc.1",
         "y-prosemirror": "1.2.9",
         "micromatch": "4.0.8",
         "svelte": "4.2.19",
