--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -38,7 +38,7 @@
         "@radix-ui/react-hover-card": "1.1.1",
         "@radix-ui/react-icons": "1.3.0",
         "@radix-ui/react-label": "2.1.0",
-        "@radix-ui/react-popover": "1.1.1",
+        "@radix-ui/react-popover": "1.1.2",
         "@radix-ui/react-progress": "1.1.0",
         "@radix-ui/react-radio-group": "1.2.0",
         "@radix-ui/react-scroll-area": "1.1.0",
@@ -82,5 +82,11 @@
     "types": "./index.d.ts",
     "publishConfig": {
         "access": "public"
+    },
+    "postcss": {
+        "plugins": {
+            "tailwindcss": {},
+            "autoprefixer": {}
+        }
     }
 }
