--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -81,5 +81,11 @@
     "types": "./index.d.ts",
     "publishConfig": {
         "access": "public"
+    },
+    "postcss": {
+        "plugins": {
+            "tailwindcss": {},
+            "autoprefixer": {}
+        }
     }
 }
