--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
         "javascript-time-ago": "2.5.10",
         "localforage": "1.10.0",
         "lodash": "4.17.21",
-        "next": "15.0.3",
+        "next": "15.1.2",
         "node-rsa": "1.1.1",
         "qrcode": "1.5.3",
-        "rc-tree": "5.9.0",
+        "rc-tree": "5.11.0",
         "react-copy-to-clipboard": "5.1.0",
-        "react": "19.0.0-rc.1",
-        "react-dom": "19.0.0-rc.1",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
         "react-resizable-panels": "2.0.20",
         "react-textarea-autosize": "8.5.3",
         "recoil": "0.7.7",
@@ -60,9 +60,9 @@
         "@types/node": "20.14.9",
         "@types/node-rsa": "1.1.4",
         "@types/qrcode": "1.5.5",
-        "@types/react": "18.3.3",
+        "@types/react": "19.0.1",
+        "@types/react-dom": "19.0.1",
         "@types/react-copy-to-clipboard": "5.0.7",
-        "@types/react-dom": "18.3.0",
         "@types/unescape-js": "1.0.2",
         "autoprefixer": "10.4.19",
         "chalk": "5.3.0",
@@ -82,8 +82,11 @@
     "resolutions": {
         "msgpackr": "1.10.1",
         "svgo": "3.0.2",
-        "react": "19.0.0-rc.1",
-        "react-dom": "19.0.0-rc.1",
+        "next": "15.1.2",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "@types/react": "19.0.1",
+        "@types/react-dom": "19.0.1",
         "y-prosemirror": "1.2.9",
         "micromatch": "4.0.8",
         "svelte": "4.2.19",
