--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -72,8 +72,7 @@
         "slate-react": "0.106.0",
         "tailwind-merge": "2.3.0",
         "tailwindcss": "3.4.4",
-        "uuid": "10.0.0",
-        "rc-tree": "5.10.1"
+        "uuid": "10.0.0"
     },
     "devDependencies": {
         "@types/uuid": "10.0.0"
