fix: tippyjs ref in react 19

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint:design": "pnpm --filter @easykit/design run lint",
         "lint:editor": "pnpm --filter @easykit/editor run lint",
         "build:design": "pnpm --filter @easykit/design run build",
-        "build:editor": "pnpm --filter @easykit/editor run build"
+        "build:editor": "pnpm --filter @easykit/editor run build",
+        "build:tippyjs": "pnpm --filter @easykit/tippyjs run build"
     },
     "dependencies": {
         "@easykit/eslint-config": "workspace:*",
@@ -33,7 +34,6 @@
         "next": "15.1.2",
         "node-rsa": "1.1.1",
         "qrcode": "1.5.3",
-        "rc-tree": "5.11.0",
         "react-copy-to-clipboard": "5.1.0",
         "react": "19.0.0",
         "react-dom": "19.0.0",
