--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,9 +1,8 @@
 {
     "name": "@easykit/editor",
-    "version": "0.0.14",
+    "version": "0.0.15",
     "keywords": [
         "easykit",
-        "design",
         "tailwindcss",
         "react",
         "editor",
@@ -56,6 +55,7 @@
         "@tiptap/extension-text-style": "2.9.1",
         "@tiptap/extension-typography": "2.9.1",
         "@tiptap/extension-underline": "2.9.1",
+        "@tiptap/extension-history": "2.9.1",
         "@tiptap/pm": "2.9.1",
         "@tiptap/react": "2.9.1",
         "@tiptap/starter-kit": "2.9.1",
