--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@easykit/design",
-    "version": "0.0.69",
+    "version": "0.0.70",
     "keywords": [
         "easykit",
         "design",
@@ -38,6 +38,7 @@
         "@radix-ui/react-hover-card": "1.1.2",
         "@radix-ui/react-icons": "1.3.2",
         "@radix-ui/react-label": "2.1.0",
+        "@radix-ui/react-navigation-menu": "^1.2.5",
         "@radix-ui/react-popover": "1.1.2",
         "@radix-ui/react-progress": "1.1.0",
         "@radix-ui/react-radio-group": "1.2.1",
@@ -62,6 +63,7 @@
         "lodash": "4.17.21",
         "lucide-react": "0.400.0",
         "postcss": "8.4.39",
+        "rc-tree": "5.12.4",
         "react-day-picker": "8.10.1",
         "react-dropzone": "14.2.3",
         "react-hook-form": "7.52.1",
@@ -72,8 +74,7 @@
         "slate-react": "0.106.0",
         "tailwind-merge": "2.3.0",
         "tailwindcss": "3.4.4",
-        "uuid": "10.0.0",
-        "rc-tree": "5.12.4"
+        "uuid": "10.0.0"
     },
     "devDependencies": {
         "@types/uuid": "10.0.0"
