--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,91 +1,91 @@
 {
-    "name": "@easykit/editor",
-    "version": "0.0.16",
-    "keywords": [
-        "easykit",
-        "tailwindcss",
-        "react",
-        "editor",
-        "tiptap"
-    ],
-    "description": "Easy kit editor",
-    "author": "Grant <284885069@qq.com>",
-    "homepage": "https://github.com/zkit-org",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/zkit-org/packages.git"
-    },
-    "scripts": {
-        "dev": "next dev -p 4001",
-        "build": "tsc && vite build",
-        "build:next": "next build",
-        "start": "next start",
-        "lint:next": "next lint",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
-    },
-    "type": "module",
-    "dependencies": {
-        "@tiptap/core": "2.9.1",
-        "@tiptap/extension-bubble-menu": "2.9.1",
-        "@tiptap/extension-bullet-list": "2.9.1",
-        "@tiptap/extension-character-count": "2.9.1",
-        "@tiptap/extension-code-block": "2.9.1",
-        "@tiptap/extension-code-block-lowlight": "2.9.1",
-        "@tiptap/extension-color": "2.9.1",
-        "@tiptap/extension-document": "2.9.1",
-        "@tiptap/extension-dropcursor": "2.9.1",
-        "@tiptap/extension-focus": "2.9.1",
-        "@tiptap/extension-font-family": "2.9.1",
-        "@tiptap/extension-heading": "2.9.1",
-        "@tiptap/extension-highlight": "2.9.1",
-        "@tiptap/extension-horizontal-rule": "2.9.1",
-        "@tiptap/extension-image": "2.9.1",
-        "@tiptap/extension-link": "2.9.1",
-        "@tiptap/extension-ordered-list": "2.9.1",
-        "@tiptap/extension-paragraph": "2.9.1",
-        "@tiptap/extension-placeholder": "2.9.1",
-        "@tiptap/extension-subscript": "2.9.1",
-        "@tiptap/extension-superscript": "2.9.1",
-        "@tiptap/extension-table": "2.9.1",
-        "@tiptap/extension-table-header": "2.9.1",
-        "@tiptap/extension-table-row": "2.9.1",
-        "@tiptap/extension-text": "2.9.1",
-        "@tiptap/extension-text-align": "2.9.1",
-        "@tiptap/extension-text-style": "2.9.1",
-        "@tiptap/extension-typography": "2.9.1",
-        "@tiptap/extension-underline": "2.9.1",
-        "@tiptap/extension-history": "2.9.1",
-        "@tiptap/pm": "2.9.1",
-        "@tiptap/react": "2.9.1",
-        "@tiptap/starter-kit": "2.9.1",
-        "@tiptap/suggestion": "2.9.1",
-        "lowlight": "3.1.0",
-        "tippy.js": "6.3.7",
-        "uuid": "10.0.0",
-        "lucide-react": "0.400.0",
-        "@radix-ui/react-dropdown-menu": "2.1.1",
-        "@radix-ui/react-popover": "1.1.1",
-        "@radix-ui/react-slot": "1.1.0",
-        "@tippyjs/react": "4.2.6",
-        "nanoid": "^5.0.7",
-        "react-colorful": "5.6.1",
-        "clsx": "2.1.1",
-        "interactjs": "^1.10.27",
-        "tailwind-merge": "2.3.0"
-    },
-    "devDependencies": {
-        "@types/uuid": "10.0.0"
-    },
-    "module": "./index.js",
-    "types": "./index.d.ts",
-    "publishConfig": {
-        "access": "public"
-    },
-    "postcss": {
-        "plugins": {
-            "tailwindcss": {},
-            "autoprefixer": {}
-        }
+  "name": "@easykit/editor",
+  "version": "0.0.17",
+  "keywords": [
+    "easykit",
+    "tailwindcss",
+    "react",
+    "editor",
+    "tiptap"
+  ],
+  "description": "Easy kit editor",
+  "author": "Grant <284885069@qq.com>",
+  "homepage": "https://github.com/zkit-org",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zkit-org/packages.git"
+  },
+  "scripts": {
+    "dev": "next dev -p 4001",
+    "build": "tsc && vite build",
+    "build:next": "next build",
+    "start": "next start",
+    "lint:next": "next lint",
+    "lint": "eslint . --ext ts,tsx"
+  },
+  "type": "module",
+  "dependencies": {
+    "@tiptap/core": "2.9.1",
+    "@tiptap/extension-bubble-menu": "2.9.1",
+    "@tiptap/extension-bullet-list": "2.9.1",
+    "@tiptap/extension-character-count": "2.9.1",
+    "@tiptap/extension-code-block": "2.9.1",
+    "@tiptap/extension-code-block-lowlight": "2.9.1",
+    "@tiptap/extension-color": "2.9.1",
+    "@tiptap/extension-document": "2.9.1",
+    "@tiptap/extension-dropcursor": "2.9.1",
+    "@tiptap/extension-focus": "2.9.1",
+    "@tiptap/extension-font-family": "2.9.1",
+    "@tiptap/extension-heading": "2.9.1",
+    "@tiptap/extension-highlight": "2.9.1",
+    "@tiptap/extension-horizontal-rule": "2.9.1",
+    "@tiptap/extension-image": "2.9.1",
+    "@tiptap/extension-link": "2.9.1",
+    "@tiptap/extension-ordered-list": "2.9.1",
+    "@tiptap/extension-paragraph": "2.9.1",
+    "@tiptap/extension-placeholder": "2.9.1",
+    "@tiptap/extension-subscript": "2.9.1",
+    "@tiptap/extension-superscript": "2.9.1",
+    "@tiptap/extension-table": "2.9.1",
+    "@tiptap/extension-table-header": "2.9.1",
+    "@tiptap/extension-table-row": "2.9.1",
+    "@tiptap/extension-text": "2.9.1",
+    "@tiptap/extension-text-align": "2.9.1",
+    "@tiptap/extension-text-style": "2.9.1",
+    "@tiptap/extension-typography": "2.9.1",
+    "@tiptap/extension-underline": "2.9.1",
+    "@tiptap/extension-history": "2.9.1",
+    "@tiptap/pm": "2.9.1",
+    "@tiptap/react": "2.9.1",
+    "@tiptap/starter-kit": "2.9.1",
+    "@tiptap/suggestion": "2.9.1",
+    "lowlight": "3.1.0",
+    "tippy.js": "6.3.7",
+    "uuid": "10.0.0",
+    "lucide-react": "0.400.0",
+    "@radix-ui/react-dropdown-menu": "2.1.1",
+    "@radix-ui/react-popover": "1.1.1",
+    "@radix-ui/react-slot": "1.1.0",
+    "@tippyjs/react": "4.2.6",
+    "nanoid": "^5.0.7",
+    "react-colorful": "5.6.1",
+    "clsx": "2.1.1",
+    "interactjs": "^1.10.27",
+    "tailwind-merge": "2.3.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "10.0.0"
+  },
+  "module": "./index.js",
+  "types": "./index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
+  "postcss": {
+    "plugins": {
+      "tailwindcss": {},
+      "autoprefixer": {}
     }
+  }
 }
