--- a/package.json
+++ b/package.json
@@ -1,95 +1,99 @@
 {
-    "name": "@easykit/root",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev:design": "pnpm --filter @easykit/design run dev",
-        "dev:editor": "pnpm --filter @easykit/editor run dev",
-        "lint:design": "pnpm --filter @easykit/design run lint",
-        "lint:editor": "pnpm --filter @easykit/editor run lint",
-        "build:design": "pnpm --filter @easykit/design run build",
-        "build:editor": "pnpm --filter @easykit/editor run build"
-    },
-    "dependencies": {
-        "@easykit/design": "workspace:./packages/design/dist",
-        "@radix-ui/react-checkbox": "1.1.1",
-        "@radix-ui/react-icons": "1.3.0",
-        "@radix-ui/react-popper": "^1.2.0",
-        "@types/sortablejs": "^1.15.8",
-        "@vitejs/plugin-react": "4.3.2",
-        "axios": "1.7.9",
-        "bowser": "2.11.0",
-        "classnames": "2.5.1",
-        "copy-to-clipboard": "^3.3.3",
-        "date-fns": "3.6.0",
-        "dayjs": "1.11.11",
-        "i18next": "23.11.5",
-        "javascript-time-ago": "2.5.10",
-        "localforage": "1.10.0",
-        "lodash": "4.17.21",
-        "next": "15.1.7",
-        "node-rsa": "1.1.1",
-        "qrcode": "1.5.3",
-        "react-copy-to-clipboard": "5.1.0",
-        "react": "19.0.0",
-        "react-dom": "19.0.0",
-        "react-resizable-panels": "2.0.20",
-        "react-textarea-autosize": "8.5.3",
-        "recoil": "0.7.7",
-        "sass": "1.77.6",
-        "sortablejs": "1.15.2",
-        "tailwindcss": "3.4.4",
-        "tailwindcss-animate": "1.0.7",
-        "tributejs": "5.1.3",
-        "vite": "5.4.8",
-        "vite-plugin-dts": "^4.2.3",
-        "vite-plugin-node-polyfills": "^0.22.0",
-        "zod": "3.23.8",
-        "zod-i18n-map": "2.27.0",
-        "zustand": "4.5.4",
-        "@arco-iconbox/react-clover": "0.0.28",
-        "next-themes": "0.4.4"
-    },
-    "devDependencies": {
-        "@types/gulp": "4.0.17",
-        "@types/lodash": "4.17.6",
-        "@types/node": "20.14.9",
-        "@types/node-rsa": "1.1.4",
-        "@types/qrcode": "1.5.5",
-        "@types/react": "19.0.1",
-        "@types/react-dom": "19.0.1",
-        "@types/react-copy-to-clipboard": "5.0.7",
-        "@types/unescape-js": "1.0.2",
-        "autoprefixer": "10.4.19",
-        "chalk": "5.3.0",
-        "cross-env": "7.0.3",
-        "eslint": "^9",
-        "eslint-config-next": "15.1.7",
-        "eslint-plugin-react-hooks": "5.1.0",
-        "@eslint/eslintrc": "^3",
-        "@next/eslint-plugin-next": "15.1.7",
-        "find-yarn-workspace-root": "2.0.0",
-        "fs-jetpack": "5.1.0",
-        "gulp": "5.0.0",
-        "gulp-replace": "1.1.4",
-        "postcss": "8.4.39",
-        "source-map-support": "0.5.21",
-        "tsx": "4.16.2",
-        "typescript": "5.5.3",
-        "unescape-js": "1.1.4",
-        "vite-plugin-static-copy": "^2.0.0"
-    },
-    "resolutions": {
-        "msgpackr": "1.10.1",
-        "svgo": "3.0.2",
-        "next": "15.1.7",
-        "react": "19.0.0",
-        "react-dom": "19.0.0",
-        "@types/react": "19.0.1",
-        "@types/react-dom": "19.0.1",
-        "y-prosemirror": "1.2.9",
-        "micromatch": "4.0.8",
-        "svelte": "4.2.19",
-        "cross-spawn": "7.0.5"
-    }
+  "name": "@easykit/root",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev:design": "pnpm --filter @easykit/design run dev",
+    "dev:editor": "pnpm --filter @easykit/editor run dev",
+    "lint:design": "pnpm --filter @easykit/design run lint",
+    "lint:editor": "pnpm --filter @easykit/editor run lint",
+    "build:design": "pnpm --filter @easykit/design run build",
+    "build:editor": "pnpm --filter @easykit/editor run build"
+  },
+  "dependencies": {
+    "@easykit/design": "workspace:./packages/design/dist",
+    "@radix-ui/react-checkbox": "1.1.1",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-popper": "^1.2.0",
+    "@types/sortablejs": "^1.15.8",
+    "@vitejs/plugin-react": "4.3.2",
+    "axios": "1.7.9",
+    "bowser": "2.11.0",
+    "classnames": "2.5.1",
+    "copy-to-clipboard": "^3.3.3",
+    "date-fns": "3.6.0",
+    "dayjs": "1.11.11",
+    "i18next": "23.11.5",
+    "javascript-time-ago": "2.5.10",
+    "localforage": "1.10.0",
+    "lodash": "4.17.21",
+    "next": "15.1.7",
+    "node-rsa": "1.1.1",
+    "qrcode": "1.5.3",
+    "react-copy-to-clipboard": "5.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-resizable-panels": "2.0.20",
+    "react-textarea-autosize": "8.5.3",
+    "recoil": "0.7.7",
+    "sass": "1.77.6",
+    "sortablejs": "1.15.2",
+    "tailwindcss": "3.4.4",
+    "tailwindcss-animate": "1.0.7",
+    "tributejs": "5.1.3",
+    "vite": "5.4.8",
+    "vite-plugin-dts": "^4.2.3",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "zod": "3.23.8",
+    "zod-i18n-map": "2.27.0",
+    "zustand": "4.5.4",
+    "@arco-iconbox/react-clover": "0.0.28",
+    "next-themes": "0.4.4"
+  },
+  "devDependencies": {
+    "@types/gulp": "4.0.17",
+    "@types/lodash": "4.17.6",
+    "@types/node": "20.14.9",
+    "@types/node-rsa": "1.1.4",
+    "@types/qrcode": "1.5.5",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
+    "@types/react-copy-to-clipboard": "5.0.7",
+    "@types/unescape-js": "1.0.2",
+    "autoprefixer": "10.4.19",
+    "chalk": "5.3.0",
+    "cross-env": "7.0.3",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.7",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "15.1.7",
+    "find-yarn-workspace-root": "2.0.0",
+    "fs-jetpack": "5.1.0",
+    "gulp": "5.0.0",
+    "gulp-replace": "1.1.4",
+    "postcss": "8.4.39",
+    "source-map-support": "0.5.21",
+    "tsx": "4.16.2",
+    "typescript": "5.5.3",
+    "unescape-js": "1.1.4",
+    "vite-plugin-static-copy": "^2.0.0"
+  },
+  "resolutions": {
+    "msgpackr": "1.10.1",
+    "svgo": "3.0.2",
+    "next": "15.1.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
+    "y-prosemirror": "1.2.9",
+    "micromatch": "4.0.8",
+    "svelte": "4.2.19",
+    "cross-spawn": "7.0.5",
+    "@typescript-eslint/parser": "8.25.0",
+    "@typescript-eslint/eslint-plugin": "8.25.0",
+    "@typescript-eslint/type-utils": "8.25.0",
+    "@typescript-eslint/utils": "8.25.0"
+  }
 }
