--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "tailwindcss": "3.4.4",
     "tailwindcss-animate": "1.0.7",
     "tributejs": "5.1.3",
-    "vite": "5.4.8",
+    "vite": "5.4.12",
     "vite-plugin-dts": "^4.2.3",
     "vite-plugin-node-polyfills": "^0.22.0",
     "zod": "3.23.8",
@@ -94,6 +94,13 @@
     "@typescript-eslint/parser": "8.25.0",
     "@typescript-eslint/eslint-plugin": "8.25.0",
     "@typescript-eslint/type-utils": "8.25.0",
-    "@typescript-eslint/utils": "8.25.0"
+    "@typescript-eslint/utils": "8.25.0",
+    "elliptic": "6.6.1",
+    "esbuild": "0.25.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
