--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easykit/editor",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "keywords": [
     "easykit",
     "tailwindcss",
@@ -68,7 +68,7 @@
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/react-slot": "1.1.0",
     "@tippyjs/react": "4.2.6",
-    "nanoid": "^5.0.7",
+    "nanoid": "5.0.9",
     "react-colorful": "5.6.1",
     "clsx": "2.1.1",
     "interactjs": "^1.10.27",
