--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "javascript-time-ago": "2.5.10",
     "localforage": "1.10.0",
     "lodash": "4.17.21",
-    "next": "15.1.7",
+    "next": "15.2.3",
     "node-rsa": "1.1.1",
     "qrcode": "1.5.3",
     "react-copy-to-clipboard": "5.1.0",
@@ -41,7 +41,7 @@
     "tailwindcss": "3.4.4",
     "tailwindcss-animate": "1.0.7",
     "tributejs": "5.1.3",
-    "vite": "5.4.12",
+    "vite": "5.4.16",
     "vite-plugin-dts": "^4.2.3",
     "vite-plugin-node-polyfills": "^0.22.0",
     "zod": "3.23.8",
@@ -82,7 +82,7 @@
   "resolutions": {
     "msgpackr": "1.10.1",
     "svgo": "3.0.2",
-    "next": "15.1.7",
+    "next": "15.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "@types/react": "19.0.1",
@@ -97,7 +97,9 @@
     "@typescript-eslint/utils": "8.25.0",
     "elliptic": "6.6.1",
     "esbuild": "0.25.0",
-    "nanoid": "3.3.8"
+    "nanoid": "3.3.8",
+    "@babel/helpers": "7.26.10",
+    "@babel/runtime": "7.26.10"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
