--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easykit/design",
-  "version": "0.0.89",
+  "version": "0.0.90",
   "keywords": [
     "easykit",
     "design",
@@ -51,8 +51,6 @@
     "@radix-ui/react-toast": "1.2.2",
     "@radix-ui/react-tooltip": "1.1.4",
     "@tanstack/react-table": "8.20.5",
-    "autoprefixer": "10.4.19",
-    "axios": "1.8.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
@@ -62,7 +60,6 @@
     "is-hotkey": "0.2.0",
     "lodash": "4.17.21",
     "lucide-react": "0.400.0",
-    "postcss": "8.4.39",
     "rc-tree": "5.12.4",
     "react-day-picker": "8.10.1",
     "react-dropzone": "14.2.3",
@@ -72,22 +69,40 @@
     "slate": "0.103.0",
     "slate-history": "0.100.0",
     "slate-react": "0.106.0",
-    "tailwind-merge": "2.3.0",
-    "tailwindcss": "3.4.4",
     "uuid": "10.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "10.0.0"
+    "@types/uuid": "10.0.0",
+    "@tailwindcss/vite": "^4.1.4"
   },
-  "module": "./index.js",
-  "types": "./index.d.ts",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./locales/zh-CN": {
+      "types": "./dist/assets/locales/zh-CN.d.ts",
+      "default": "./dist/locales/zh-CN.js"
+    },
+    "./locales/zh-TW": {
+      "types": "./dist/assets/locales/zh-TW.d.ts",
+      "default": "./dist/locales/zh-TW.js"
+    },
+    "./locales/en-US": {
+      "types": "./dist/assets/locales/en-US.d.ts",
+      "default": "./dist/locales/en-US.js"
+    },
+    "./style.css": "./dist/style.css",
+    "./theme.css": "./dist/theme.css"
+  },
   "publishConfig": {
     "access": "public"
   },
-  "postcss": {
-    "plugins": {
-      "tailwindcss": {},
-      "autoprefixer": {}
-    }
-  }
+  "files": [
+    "/dist",
+    "package.json",
+    "README.md"
+  ]
 }
