--- a/packages/design/tsconfig.json
+++ b/packages/design/tsconfig.json
@@ -6,6 +6,9 @@
       "@/*": [
         "./src/*"
       ],
+      "@/lib/*": [
+        "./src/lib/*"
+      ],
       "@easykit/design/*": [
         "./src/*"
       ],
