feat: 升级基础组件库

--- a/packages/design/components.json
+++ b/packages/design/components.json
@@ -1,11 +1,11 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "new-york",
+  "style": "default",
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.mjs",
-    "css": "src/assets/globals.css",
+    "config": "",
+    "css": "src/assets/style/theme.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
