--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "tailwind-merge": "3.2.0",
     "tailwindcss": "4.1.4",
     "tailwindcss-animate": "1.0.7",
-    "tw-animate-css": "1.2.5",
     "tributejs": "5.1.3",
+    "tw-animate-css": "1.2.5",
     "vite": "5.4.16",
     "vite-plugin-dts": "^4.2.3",
     "vite-plugin-node-polyfills": "^0.22.0",
@@ -56,8 +56,7 @@
     "zustand": "4.5.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@next/eslint-plugin-next": "15.1.7",
+    "@biomejs/biome": "^1.9.4",
     "@types/gulp": "4.0.17",
     "@types/lodash": "4.17.6",
     "@types/node": "20.14.9",
@@ -70,9 +69,6 @@
     "autoprefixer": "10.4.19",
     "chalk": "5.3.0",
     "cross-env": "7.0.3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "eslint-plugin-react-hooks": "5.1.0",
     "find-yarn-workspace-root": "2.0.0",
     "fs-jetpack": "5.1.0",
     "gulp": "5.0.0",
@@ -96,10 +92,6 @@
     "micromatch": "4.0.8",
     "svelte": "4.2.19",
     "cross-spawn": "7.0.5",
-    "@typescript-eslint/parser": "8.25.0",
-    "@typescript-eslint/eslint-plugin": "8.25.0",
-    "@typescript-eslint/type-utils": "8.25.0",
-    "@typescript-eslint/utils": "8.25.0",
     "elliptic": "6.6.1",
     "esbuild": "0.25.0",
     "nanoid": "3.3.8",
@@ -108,6 +100,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@biomejs/biome",
       "esbuild"
     ],
     "ignoredBuiltDependencies": [
