--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -22,7 +22,7 @@
     "build:next": "next build",
     "start": "next start",
     "lint:next": "next lint",
-    "lint": "eslint . --ext ts,tsx"
+    "lint": "biome lint --config-path=biome.json"
   },
   "type": "module",
   "dependencies": {
