--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@arco-iconbox/react-clover": "0.0.28",
-    "@easykit/design": "workspace:./packages/design/dist",
+    "@easykit/design": "workspace:*",
     "@radix-ui/react-checkbox": "1.1.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-popper": "^1.2.0",
