--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easykit/editor",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "keywords": [
     "easykit",
     "tailwindcss",
@@ -67,7 +67,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/react-slot": "1.1.0",
-    "@tippyjs/react": "4.2.6",
+    "rb-tippyjs-react": "4.3.1",
     "nanoid": "5.0.9",
     "react-colorful": "5.6.1",
     "clsx": "2.1.1",
