--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "esbuild": "0.25.0",
     "nanoid": "3.3.8",
     "@babel/helpers": "7.26.10",
-    "@babel/runtime": "7.26.10"
+    "@babel/runtime": "7.26.10",
+    "brace-expansion": "2.0.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
