feat: add lucide-react

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,8 @@
     "tributejs",
     "bowser",
     "msgpackr",
-    "prosemirror"
+    "prosemirror",
+    "uuidv"
   ],
   "css.customData": [".vscode/tailwind.json"],
   "editor.codeActionsOnSave": {
