--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easykit/design",
-  "version": "0.0.132",
+  "version": "0.0.133",
   "keywords": [
     "easykit",
     "design",
@@ -57,6 +57,7 @@
     "date-fns": "3.6.0",
     "escape-html": "1.0.3",
     "github-markdown-css": "5.6.1",
+    "input-otp": "^1.4.2",
     "is-hotkey": "0.2.0",
     "lodash": "4.17.21",
     "lucide-react": "0.400.0",
