fix: 水合不一致的问题

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,8 @@
     "bowser",
     "msgpackr",
     "prosemirror",
-    "uuidv"
+    "uuidv",
+    "datatable"
   ],
   "css.customData": [".vscode/tailwind.json"],
   "editor.codeActionsOnSave": {
