--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "javascript-time-ago": "2.5.10",
     "localforage": "1.10.0",
     "lodash": "4.17.21",
+    "lucide-react": "0.516.0",
     "next": "15.3.3",
     "next-themes": "0.4.4",
     "node-rsa": "1.1.1",
@@ -53,8 +54,7 @@
     "vite-plugin-node-polyfills": "^0.22.0",
     "zod": "3.23.8",
     "zod-i18n-map": "2.27.0",
-    "zustand": "4.5.4",
-    "lucide-react": "0.516.0"
+    "zustand": "4.5.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -103,6 +103,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@biomejs/biome",
+      "@tailwindcss/oxide",
       "esbuild"
     ],
     "ignoredBuiltDependencies": [
