--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,8 +39,12 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "never",
     "source.fixAll.ts": "never",
+    "source.fixAll.biome": "explicit",
+    "source.organizeImports.biome": "explicit",
+    "source.action.useSortedAttributes.biome": "explicit",
     "quickfix.biome": "explicit",
-    "source.organizeImports.biome": "explicit"
+    "quickfix.biome.correctness.noUnusedImports": "never",
+    "quickfix.biome.correctness.noUnusedVariables": "never"
   },
   "editor.defaultFormatter": "biomejs.biome",
   "editor.formatOnPaste": false,
