--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -21,7 +21,7 @@
     "build:next": "next build",
     "start": "next start",
     "lint:next": "next lint",
-    "lint": "biome lint --config-path=biome.json"
+    "lint": "biome lint"
   },
   "type": "module",
   "dependencies": {
