--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev:design": "pnpm --filter @easykit/design run dev",
+    "dev:playground": "pnpm --filter @easykit/playground run dev",
     "dev:editor": "pnpm --filter @easykit/editor run dev",
+    "lint:playground": "pnpm --filter @easykit/playground run lint",
     "lint:design": "pnpm --filter @easykit/design run lint",
     "lint:editor": "pnpm --filter @easykit/editor run lint",
-    "build:design": "pnpm --filter @easykit/design run build",
+    "build:playground": "pnpm --filter @easykit/playground run build",
     "build:editor": "pnpm --filter @easykit/editor run build"
   },
   "dependencies": {
-    "@arco-iconbox/react-clover": "0.0.28",
     "@easykit/design": "workspace:*",
+    "@arco-iconbox/react-clover": "0.0.28",
     "@radix-ui/react-checkbox": "1.1.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-popper": "^1.2.0",
