--- a/packages/design/components.json
+++ b/packages/design/components.json
@@ -11,11 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
+    "components": "@easykit/design/components",
+    "utils": "@easykit/design/lib/utils",
+    "ui": "@easykit/design/components/ui",
+    "lib": "@easykit/design/lib",
+    "hooks": "@easykit/design/hooks"
   },
   "iconLibrary": "lucide"
 }
