--- a/apps/authub/package.json
+++ b/apps/authub/package.json
@@ -23,9 +23,22 @@
   },
   "type": "module",
   "dependencies": {
-    "next-themes": "0.4.4",
-    "tailwindcss": "^3.4.0",
+    "@tanstack/react-query": "5.80.3",
+    "@tanstack/react-query-devtools": "5.80.3",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "cookies-next": "5.0.2",
+    "i18next-browser-languagedetector": "8.0.4",
+    "i18next-react-postprocessor": "3.1.0",
+    "jotai": "2.10.2",
+    "js-cookie": "3.0.5",
+    "next-themes": "0.4.4",
+    "nuqs": "2.4.3",
+    "ogl": "^1.0.11",
+    "postcss": "^8.4.0",
+    "react-i18next": "15.5.1",
+    "tailwindcss": "^3.4.0"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "3.0.6"
   }
 }
