--- a/apps/authub/package.json
+++ b/apps/authub/package.json
@@ -36,7 +36,8 @@
     "ogl": "^1.0.11",
     "postcss": "^8.4.0",
     "react-i18next": "15.5.1",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "jsencrypt": "^3.3.2"
   },
   "devDependencies": {
     "@types/js-cookie": "3.0.6"
