--- a/apps/authub/package.json
+++ b/apps/authub/package.json
@@ -37,7 +37,8 @@
     "postcss": "^8.4.0",
     "react-i18next": "15.5.1",
     "tailwindcss": "^3.4.0",
-    "jsencrypt": "^3.3.2"
+    "jsencrypt": "^3.3.2",
+    "@svgr/webpack": "8.1.0"
   },
   "devDependencies": {
     "@types/js-cookie": "3.0.6"
