--- a/apps/authub/package.json
+++ b/apps/authub/package.json
@@ -38,7 +38,10 @@
     "react-i18next": "15.5.1",
     "tailwindcss": "^3.4.0",
     "jsencrypt": "^3.3.2",
-    "@svgr/webpack": "8.1.0"
+    "@svgr/webpack": "8.1.0",
+    "input-otp": "1.4.2",
+    "es-toolkit": "1.35.0",
+    "react-hook-form": "7.52.1"
   },
   "devDependencies": {
     "@types/js-cookie": "3.0.6"
