--- a/packages/design/tsconfig.json
+++ b/packages/design/tsconfig.json
@@ -3,15 +3,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      // "@easykit/design": ["./src/index.ts"],
-      // "@easykit/design/*": ["./src/*"],
-      // "@easykit/design/components/*": ["./src/components/*"],
-      // "@easykit/design/hooks/*": ["./src/hooks/*"],
-      // "@easykit/design/lib/*": ["./src/lib/*"],
-      // "@easykit/design/utils/*": ["./src/utils/*"],
-      // "@easykit/design/types/*": ["./src/types/*"],
-      // "@easykit/design/locales/*": ["./src/locales/*"],
-      // "@easykit/design/style/*": ["./src/style/*"]
+      "@easykit/design/components/*": ["./src/components/*"],
+      "@easykit/design/utils/*": ["./src/utils/*"],
+      "@easykit/design/ui/*": ["./src/components/ui/*"],
+      "@easykit/design/lib/*": ["./src/lib/*"],
+      "@easykit/design/hooks/*": ["./src/hooks/*"]
     },
     "jsx": "preserve",
     "esModuleInterop": true,
