--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easykit/design",
-  "version": "0.0.158",
+  "version": "0.0.159",
   "keywords": [
     "easykit",
     "design",
@@ -23,7 +23,7 @@
   "type": "module",
   "dependencies": {
     "@emotion/react": "11.11.4",
-    "@hookform/resolvers": "3.7.0",
+    "@hookform/resolvers": "5.2.2",
     "@radix-ui/react-alert-dialog": "1.1.2",
     "@radix-ui/react-avatar": "1.1.1",
     "@radix-ui/react-checkbox": "1.1.2",
@@ -67,8 +67,7 @@
     "slate-history": "0.100.0",
     "slate-react": "0.106.0",
     "sonner": "^2.0.3",
-    "uuid": "10.0.0",
-    "zod": "3.23.8"
+    "uuid": "10.0.0"
   },
   "devDependencies": {
     "@types/uuid": "10.0.0"
